@@ -362,7 +362,7 @@ class TestNonAscii(TestCaseWithTransport):
         self.build_tree_contents([(fname, 'modified\n')])
 
         txt = self.run_bzr_decode('modified')
-        self.assertEqual(fname+'\n', txt)
+        self.assertEqual('"'+fname+'"'+'\n', txt)
 
         self.run_bzr_decode('modified', encoding='ascii', fail=True)
 
@@ -372,7 +372,7 @@ class TestNonAscii(TestCaseWithTransport):
         self.wt.add(fname)
 
         txt = self.run_bzr_decode('added')
-        self.assertEqual(fname+'\n', txt)
+        self.assertEqual('"'+fname+'"'+'\n', txt)
 
         self.run_bzr_decode('added', encoding='ascii', fail=True)
 
@@ -439,6 +439,7 @@ class TestNonAscii(TestCaseWithTransport):
 
         # TODO: jam 20060112 bzr unknowns is the only one which 
         #       quotes paths do we really want it to?
+        #       awilkins 20080521 added and modified do it now as well
         txt = self.run_bzr_decode('unknowns')
         self.assertEqual(u'"%s"\n' % (fname,), txt)
 
